# camoufox-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
camoufoxmcp/: __init__.py  __main__.py  cloudscraper_bridge.py  flaresolverr_bridge.py  markdown.py  server.py  session.py  snapshot.py  vision.py
tests/: test_camoufoxmcp.py
